test/scc/expr/semantic-errors/128.a
128.t:4:16: error: initialization from incompatible pointer types